Fri Apr  7 15:56:57 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
	* configure.in (WARN_CFLAGS): Set to -W -Wall by default.  Add
 	--enable-build-warnings option.
	* Makefile.am (AM_CFLAGS, WARN_CFLAGS): Add definitions.
	* Makefile.in, configure: Re-generate.

2000-04-07  Nick Clifton  <nickc@cygnus.com>

	* reloc.c: Add BFD_RELOC_ARM_PCREL_BLX and
	BFD_RELOC_THUMB_PCREL_BLX.

	* elf32-arm.h (elf32_arm_final_link_relocate): Handle
	R_ARM_XPC25 and R_ARM_THM_PC22.

	* elfarm-nabi.c (elf32_arm_howto_): Fix definitions of
	R_ARM_XPC25 and R_ARM_THM_XPC22.
	(elf32_arm_reloc_map): Make BFD_RELOC_{ARM|THUMB}_PCREL_BLX to
	R_ARM_[XPC25|THM_XPC22].

	* elfarm-oabi.c: Define OLD_ARM_ABI and change include from
	elf/arm-oabi.h to elf/arm.h

	* Makefile.am: Fix dependency for elfarm-oabi.c
	* Makefile.in: Regenerate.
	
	* bfd-in2.h: Regenerate.
	* libbfd.h: Regenerate.

2000-04-06  Michael Snyder  <msnyder@seadog.cygnus.com>

	* elfcore.h (elf_core_file_p): preserve value of tdata at entry,
	and restore it on failure.  Release newly allocated tdata on
	failure.
	
Fri Apr  7 11:33:47 2000  Jim Wilson  <wilson@cygnus.com>

	* dwarf2.c (struct dwarf2_debug): New field dwarf_line_size.
	(decode_line_info): Set it.  Report error if unit->line_offset is
	equal to or larger than it.

2000-04-07  Timothy Wall  <twall@cygnus.com>

	* targets.c: Added vecs for tic54x.
	* reloc.c: Added relocs for tic54x.
	* libbfd.h: Regenerated.
	* configure: Add TI COFF vecs for tic54x.
	* configure.in: Ditto.
	* config.bfd (targ_cpu): Recognize new tic54x target.
	* coffcode.h (coff_slurp_symbol_table): Additions for TI COFF handling.
	* bfd-in2.h: Add tic54x target and relocations.
	* Makefile.am, Makefile.in: Add tic54x target.
	* archures.c (bfd_archures_list): Add tic54x target.
	* coff-tic54x.c: New.
	* cpu-tic54x.c: New.
	
2000-04-06  Michael Snyder  <msnyder@seadog.cygnus.com>

	* elfcore.h (elf_core_file_p): call backend_object_p which