@@ -1,3 +1,9 @@
+2000-04-11  Timothy Wall  <twall@cygnus.com>
+
+	* ti.h: Remove load page references until load pages are
+	reimplemented. 
+	* tic54x.h: Ditto.
+	
 2000-04-07  Timothy Wall  <twall@cygnus.com>
 
 	* internal.h: Fix some comments related to TI COFF (instead of tic80).
