@@ -1,3 +1,11 @@
+2000-04-11  Timothy Wall  <twall@cygnus.com>
+
+	* coff-tic54x.c: Now builds with all targets.
+	* Makefile.am: Add coff/tic54x.h to coff-tic54x.o dependencies.
+	* Makefile.in: Regenerate.
+	* coffcode.h (coff_set_arch_mach_hook): Eliminate warning on
+	unitialized variable.
+	
 Fri Apr  7 15:56:57 2000  Andrew Cagney  <cagney@b1.cygnus.com>
  
 	* configure.in (WARN_CFLAGS): Set to -W -Wall by default.  Add
